@@ -16,6 +16,8 @@ rcpt to:<userx@test.ex>
 ??? 550
 DATA
 ??? 503
+??? 503
+??? 503
 QUIT
 ??? 221
 ****
@@ -28,6 +30,8 @@ mail from:<userx@test.ex>
 rcpt to:<userx@test.ex>
 ??? 550
 DATA
+??? 503
+??? 503
 ??? 503
 QUIT
 ??? 221
@@ -45,6 +49,8 @@ rcpt to:<userx@test.ex>
 ??? 503
 DATA
 ??? 503
+??? 503
+??? 503
 QUIT
 ??? 221
 ****
@@ -57,6 +63,8 @@ mail from:<deny@test.ex>
 rcpt to:<userx@test.ex>
 ??? 503
 DATA
+??? 503
+??? 503
 ??? 503
 QUIT
 ??? 221
@@ -78,6 +86,8 @@ rcpt to:<ph12@test.ex>
 ??? 550
 DATA
 ??? 503
+??? 503
+??? 503
 QUIT
 ??? 221
 ****
@@ -95,6 +105,8 @@ rcpt to:<ph12@test.ex>
 ??? 550
 DATA
 ??? 503
+??? 503
+??? 503
 QUIT
 ??? 221
 ****
@@ -108,6 +120,8 @@ ehlo rhu.barb
 rcpt to:<userx@test.ex>
 ??? 503
 DATA
+??? 503
+??? 503
 ??? 503
 QUIT
 ??? 221
