@@ -9,6 +9,8 @@ rcpt to: userx
 220 the.local.host.name ESMTP Exim x.yz Tue, 2 Mar 1999 09:44:33 +0000
 250 OK
 501 userx: recipient address must contain a domain
+503-All RCPT commands were rejected with this error:
+503-501 userx: recipient address must contain a domain
 503 valid RCPT command must precede DATA
 500 unrecognized command
 500 unrecognized command
